--- a/index.html
+++ b/index.html
@@ -1,60 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LEELATECH</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #fff; /* White background */
-            text-align: center;
-        }
-
-        header {
-            background-color: #333;
-            padding: 20px;
-        }
-
-        header img {
-            width: 150px;
-            height: auto;
-        }
-
-        section {
-            padding: 50px 20px;
-            text-align: center;
-        }
-
-        section h2 {
-            color: #333;
-        }
-
-        section p {
-            color: #666;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LEELATECH - Your Innovative Technology Solution Provider</title>
+  <style>
+    /* ... (previous styles) ... */
+  </style>
 </head>
+
 <body>
+  <header>
+    <img id="logo" src="https://leela.tech/assets/logo.png" alt="LEELATECH Logo">
+    <h1>LEELATECH</h1>
+    <p>Your Innovative Technology Solution Provider</p>
+  </header>
 
-    <!-- Header -->
-    <header>
-        <img src="./assets/logo.png" alt="LEELATECH Logo">
-    </header>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#services">DevSecOps Services</a>
+    <a href="#software-factory">Software Factory</a>
+    <a href="#products">Products</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
-    <!-- Main Content -->
-    <section>
-        <h2>LEELATECH</h2>
-        <p>Your innovative technology solution provider</p>
-   
+  <section id="home">
+    <h2>Welcome to Your DevSecOps Journey</h2>
+    <p>This is the home section. Add your content here.</p>
+  </section>
+
+  <section id="services">
+    <h2>DevSecOps Services</h2>
+    <ul>
+      <li>CI/CD</li>
+      <li>Cost-oriented Optimization</li>
+      <li>Containerization</li>
+      <li>DBA</li>
+      <li>Infrastructure as Code</li>
+      <li>Logging and Monitoring</li>
+      <li>Migration</li>
+      <li>Network Administration</li>
+      <li>Performance-oriented Optimization</li>
+      <li>Security and Compliance</li>
+      <li>Kubernetes</li>
+    </ul>
+  </section>
+
+  <section id="software-factory">
+    <h2>Software Factory</h2>
+    <p>Your one-stop destination for software development and project management solutions.</p>
+    <h3>Services We Offer:</h3>
+    <ul>
+      <li>Software Development</li>
+      <li>Project Management</li>
+      <li>Technologies</li>
+      <li>End-to-end Turnkey</li>
+    </ul>
+    <p>Explore our comprehensive suite of services tailored to meet your software development needs and project management requirements. Our team of experts ensures the use of cutting-edge technologies and provides end-to-end turnkey solutions.</p>
+  </section>
+
+  <section id="products">
+    <h2>Products</h2>
+    <p>Coming Soon</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <form>
+      <!-- ... (contact form content) ... -->
+    </form>
+  </section>
+</body>
+
+</html>
