--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <body>
   <header>
-    <img id="logo" src="https://leela.tech/assets/logo.png" alt="LEELATECH Logo">
+    <img id="logo" src="https://leela.tech/assets/logo.png" alt="LEELATECH Logo" width="100" height="100">
     <h1>LEELATECH</h1>
     <p>Your Innovative Technology Solution Provider</p>
   </header>
