--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <nav>
     <a href="#home">Home</a>
-    <a href="#services">DevSecOps Services</a>
+    <a href="#services">DevSecOps Solutions</a>
     <a href="#software-factory">Software Factory</a>
     <a href="#products">Products</a>
     <a href="#contact">Contact</a>
@@ -107,7 +107,7 @@
   </section>
 
   <section id="services">
-    <h2>DevSecOps Services</h2>
+    <h2>DevSecOps Solutions</h2>
     <ul>
       <li>CI/CD</li>
       <li>Cost-oriented Optimization</li>
