--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <nav>
     <a href="#home">Home</a>
     <a href="#services">DevSecOps Solutions</a>
-    <a href="#software-factory">Software Factory</a>
+    <a href="#software-factory">Software Engineering</a>
     <a href="#products">Products</a>
     <a href="#contact">Contact</a>
   </nav>
@@ -124,7 +124,7 @@
   </section>
 
   <section id="software-factory">
-    <h2>Software Factory</h2>
+    <h2>Software Engineering</h2>
     <p>Your one-stop destination for software development and project management solutions.</p>
     <h3>Services We Offer:</h3>
     <ul>
